# life-scenarios

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: run_demo.py
family_tax/: __init__.py  cli.py  narrative.py  scenario.py
family_tax/events/: inheritance.py  marriage_to_non_us_spouse.py  sell_foreign_residence.py
life_scenarios/: __init__.py  cli.py  narrative.py  scenario.py
life_scenarios/events/: career_break.py  education_funding.py  foreign_gift.py  marriage_finance_planning.py  relocation_cost.py  sell_major_asset.py  switch_to_self_employment.py
scenarios/: career_break_12mo.yaml  education_funding_two_kids.yaml  foreign_gift_generic.yaml  inheritance_generic.yaml  inheritance_german_father.yaml  inheritance_italian_mother.yaml  inheritance_uk_grandparent.yaml  large_gift_from_foreign_parent.yaml  marriage_finance_planning.yaml  marriage_us_citizen_to_eu.yaml  relocation_high_to_lower_col.yaml  sell_italian_apartment_as_us_resident.yaml  sell_major_asset.yaml  switch_to_self_employment.yaml
